fixed guides page on mobile

--- a/src/pages/guides/guides.css
+++ b/src/pages/guides/guides.css
@@ -11,7 +11,6 @@
 
 .title_h1 {
   color: var(--base-500);
-  max-width: 1440rem;
   text-align: left;
 }
 
