--- a/src/stylesheets/components/molecules.css
+++ b/src/stylesheets/components/molecules.css
@@ -301,7 +301,7 @@ ul {
     width: 100%;
   }
   .M_tab_group {
-    width: 93vw;
+    width: 100%;
     justify-content: center;
   }
   .M_guide_card {
