--- a/src/stylesheets/components/organisms.css
+++ b/src/stylesheets/components/organisms.css
@@ -156,6 +156,7 @@
     gap: 60rem;
     margin-top: 60rem;
     padding: 0 16rem;
+    width: 100%;
   }
   .O_menu {
     margin-top: 20rem;
